exports[`<PushToMDM />  render tests  should match snapshot if configuredMDMType is configured 1`] = `
<button
  className="push-button fn-secondary "
  id="pushBtn12345"
  onClick={[Function anonymous]}>
  <span
    aria-live="assertive"
    className="sr-only">
    Re-push app titled The Greatest App in the West to MDM.
  </span>
  
  <span
    aria-hidden="true"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Re-Push to MDM"
      }
    } />
</button>
`;

exports[`<PushToMDM />  render tests  should match snapshot if configuredMDMType is null 1`] = `
<button
  className="push-button fn-primary "
  id="pushBtn12345"
  onClick={[Function anonymous]}>
  <span
    aria-live="assertive"
    className="sr-only">
    Push app titled The Greatest App in the West to MDM.
  </span>
  
  <span
    aria-hidden="true"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Push to MDM"
      }
    } />
</button>
`;

exports[`<PushToMDM />  test all appCatalogMDMStatuses conditions should match snapshot if appCatalogMDMStatuses is FAILED 1`] = `
<button
  className="push-button fn-primary "
  id="pushBtn12345"
  onClick={[Function anonymous]}>
  <span
    aria-live="assertive"
    className="sr-only">
    Push app titled The Greatest App in the West to MDM.
  </span>
  
  <span
    aria-hidden="true"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Push to MDM"
      }
    } />
</button>
`;

exports[`<PushToMDM />  test all appCatalogMDMStatuses conditions should match snapshot if appCatalogMDMStatuses is INSTALLED 1`] = `
<button
  className="push-button fn-secondary "
  id="pushBtn12345"
  onClick={[Function anonymous]}>
  <span
    aria-live="assertive"
    className="sr-only">
    Re-push app titled The Greatest App in the West to MDM.
  </span>
  
  <span
    aria-hidden="true"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Re-Push to MDM"
      }
    } />
</button>
`;

exports[`<PushToMDM />  test all appCatalogMDMStatuses conditions should match snapshot if appCatalogMDMStatuses is INSTALLED_UPDATABLE 1`] = `
<button
  className="push-button fn-primary "
  id="pushBtn12345"
  onClick={[Function anonymous]}>
  <span
    aria-live="assertive"
    className="sr-only">
    Push app titled The Greatest App in the West to MDM.
  </span>
  
  <span
    aria-hidden="true"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Push to MDM"
      }
    } />
</button>
`;

exports[`<PushToMDM />  test all appCatalogMDMStatuses conditions should match snapshot if appCatalogMDMStatuses is IN_PROGRESS 1`] = `
<button
  className="push-button fn-primary deaden "
  id="pushBtn12345"
  onClick={[Function anonymous]}>
  <span
    aria-live="assertive"
    className="sr-only">
    App submission in progress.
  </span>
  <i
    aria-hidden="true"
    className="icon-reload" />
  <span
    aria-hidden="true"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Submitting&hellip;"
      }
    } />
</button>
`;

exports[`<PushToMDM />  test all appCatalogMDMStatuses conditions should match snapshot if appCatalogMDMStatuses is NOT_INSTALLED 1`] = `
<button
  className="push-button fn-primary "
  id="pushBtn12345"
  onClick={[Function anonymous]}>
  <span
    aria-live="assertive"
    className="sr-only">
    Push app titled The Greatest App in the West to MDM.
  </span>
  
  <span
    aria-hidden="true"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Push to MDM"
      }
    } />
</button>
`;

exports[`<PushToMDM />  test all appCatalogMDMStatuses conditions should match snapshot if appCatalogMDMStatuses is PENDING 1`] = `
<button
  className="push-button fn-primary deaden "
  id="pushBtn12345"
  onClick={[Function anonymous]}>
  <span
    aria-live="assertive"
    className="sr-only">
    App submission in progress.
  </span>
  <i
    aria-hidden="true"
    className="icon-reload" />
  <span
    aria-hidden="true"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Submitting&hellip;"
      }
    } />
</button>
`;
